fix: apply vertical align on menu items

--- a/assets/index.less
+++ b/assets/index.less
@@ -126,6 +126,7 @@
     & > .@{menuPrefixCls}-submenu, & > .@{menuPrefixCls}-item {
       border-bottom: 2px solid transparent;
       display: inline-block;
+      vertical-align: bottom;
 
       &-active {
         border-bottom: 2px solid #2db7f5;
